Projetos/ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;

DllImport int ECF_GetArredonda(const INTPTR ecfHandle);

DllImport int ECF_GetChequePronto(const INTPTR ecfHandle);

DllImport int ECF_GetDecimaisPreco(const INTPTR ecfHandle);

DllImport int ECF_GetDecimaisQtd(const INTPTR ecfHandle);

DllImport int ECF_GetDescricaoGrande(const INTPTR ecfHandle);

DllImport int ECF_GetGavetaAberta(const INTPTR ecfHandle);

DllImport int ECF_GetGavetaSinalInvertido(const INTPTR ecfHandle);

DllImport int ECF_GetHorarioVerao(const INTPTR ecfHandle);

DllImport int ECF_GetIdentificaConsumidorRodape(const INTPTR ecfHandle);

DllImport int ECF_GetIntervaloAposComando(const INTPTR ecfHandle);

DllImport int ECF_GetLinhasEntreCupons(const INTPTR ecfHandle);

DllImport int ECF_GetMFD(const INTPTR ecfHandle);

DllImport int ECF_GetOperador(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetSubTotal(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTermica(const INTPTR ecfHandle);

DllImport int ECF_GetTotalPago(const INTPTR ecfHandle, double* value);

DllImport int ECF_IdentificaConsumidor(const INTPTR ecfHandle, const PCHAR cpfCnpj, const PCHAR nome, const PCHAR endereco);

DllImport int ECF_SetDecimaisPreco(const INTPTR ecfHandle, const int decimaisPreco);

DllImport int ECF_SetDecimaisQtd(const INTPTR ecfHandle, const int decimaisQtd);

DllImport int ECF_SetDescricaoGrande(const INTPTR ecfHandle, const BOOL descricaoGrande);

DllImport int ECF_SetGavetaSinalInvertido(const INTPTR ecfHandle, const BOOL gavetaSinalInvertido);

DllImport int ECF_SetIntervaloAposComando(const INTPTR ecfHandle, const int intervalo);

DllImport int ECF_SetLinhasEntreCupons(const INTPTR ecfHandle, const int linhasEntreCupons);

DllImport int ECF_SetOperador(const INTPTR ecfHandle, const PCHAR operador);